--- a/files/order/styles.css
+++ b/files/order/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1500px;
+  width:1719px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -2344,23 +2344,124 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u182_img {
+#u182_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:1500px;
-  height:73px;
+  width:74px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
 }
 #u182 {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:713px;
-  width:1500px;
-  height:73px;
+  left:303px;
+  top:827px;
+  width:74px;
+  height:18px;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
 }
 #u182_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:74px;
+  white-space:nowrap;
+}
+#u183_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:126px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u183 {
+  border-width:0px;
+  position:absolute;
+  left:381px;
+  top:827px;
+  width:300px;
+  height:126px;
+}
+#u183_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  word-wrap:break-word;
+}
+#u184_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:390px;
+  height:106px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:14px;
+}
+#u184 {
+  border-width:0px;
+  position:absolute;
+  left:381px;
+  top:963px;
+  width:390px;
+  height:106px;
+  font-size:14px;
+}
+#u184_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:390px;
+  word-wrap:break-word;
+}
+#u185_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1440px;
+  height:53px;
+}
+#u185 {
+  border-width:0px;
+  position:absolute;
+  left:279px;
+  top:693px;
+  width:1440px;
+  height:53px;
+}
+#u185_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -2369,13 +2470,13 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u183_div {
+#u186_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:71px;
-  height:87px;
+  width:59px;
+  height:85px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   box-sizing:border-box;
@@ -2387,15 +2488,15 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u183 {
+#u186 {
   border-width:0px;
   position:absolute;
-  left:1267px;
-  top:706px;
-  width:71px;
-  height:87px;
+  left:1508px;
+  top:677px;
+  width:59px;
+  height:85px;
 }
-#u183_text {
+#u186_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -2404,7 +2505,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u184 {
+#u187 {
   border-width:0px;
   position:absolute;
   left:910px;
@@ -2412,145 +2513,75 @@
   width:0px;
   height:0px;
 }
-#u184_seg0 {
+#u187_seg0 {
   border-width:0px;
   position:absolute;
   left:-4px;
   top:0px;
   width:8px;
-  height:323px;
+  height:302px;
 }
-#u184_seg1 {
+#u187_seg1 {
   border-width:0px;
   position:absolute;
   left:-4px;
-  top:315px;
-  width:401px;
+  top:294px;
+  width:636px;
   height:8px;
 }
-#u184_seg2 {
+#u187_seg2 {
   border-width:0px;
   position:absolute;
-  left:389px;
-  top:315px;
+  left:624px;
+  top:294px;
   width:8px;
-  height:107px;
+  height:99px;
 }
-#u184_seg3 {
+#u187_seg3 {
   border-width:0px;
   position:absolute;
-  left:384px;
-  top:410px;
-  width:18px;
-  height:18px;
-}
-#u184_text {
-  border-width:0px;
-  position:absolute;
-  left:38px;
-  top:311px;
-  width:100px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u185_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:61px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u185 {
-  border-width:0px;
-  position:absolute;
-  left:310px;
-  top:827px;
-  width:61px;
-  height:18px;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u185_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:61px;
-  white-space:nowrap;
-}
-#u186_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:300px;
-  height:126px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u186 {
-  border-width:0px;
-  position:absolute;
-  left:381px;
-  top:827px;
-  width:300px;
-  height:126px;
-}
-#u186_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:300px;
-  word-wrap:break-word;
-}
-#u187_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:390px;
-  height:106px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-size:14px;
-}
-#u187 {
-  border-width:0px;
-  position:absolute;
-  left:381px;
-  top:963px;
-  width:390px;
-  height:106px;
-  font-size:14px;
+  left:618px;
+  top:380px;
+  width:20px;
+  height:20px;
 }
 #u187_text {
   border-width:0px;
   position:absolute;
+  left:162px;
+  top:290px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u188_div {
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
-  width:390px;
+  width:150px;
+  height:88px;
+  background:inherit;
+  background-color:rgba(255, 223, 37, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+#u188 {
+  border-width:0px;
+  position:absolute;
+  left:1358px;
+  top:595px;
+  width:150px;
+  height:88px;
+}
+#u188_text {
+  border-width:0px;
+  position:absolute;
+  left:10px;
+  top:10px;
+  width:130px;
   word-wrap:break-word;
 }
